# 6404BochkarevD

./: .gitignore  6404_БочкаревДТ_Итоговый_Отчёт.docx
ImageProcessing/: logging.yml  logging_config.py  main.py  main_3.py  my_log.txt  pyproject.toml  test.py
ImageProcessing/def_implementation/: __init__.py  def_image_processing.py
ImageProcessing/imageprocessing_bochkarev_6404.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ImageProcessing/implementation/: __init__.py  cat_image.py  cat_image_processor.py  image_processing.py
ImageProcessing/tests/: test_cat_image.py  test_cat_image_processor.py
myenv/: pyvenv.cfg
myenv/Scripts/: activate  activate.bat
